@@ -10,6 +10,7 @@ Improvements:
    * Multibutton entry entry is now an elm layout.
    * Popup widget is now an elm layout.
    * Panel widget is now an elm layout.
+   * Improve elm map module loading/searching efficiency.
 
 Fixes:
 
